config.json: updated domain

--- a/_data/config.json
+++ b/_data/config.json
@@ -69,5 +69,6 @@
                 "new_window": true
             }
         ]
-    }
+    },
+    "domain": "https://oval-aspen-86b61.netlify.app"
 }
